# SubForge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_PROVIDERS_SUBSCRIPTIONS.md  CHANGELOG.md  LICENSE  OPTIMIZED_ARCHITECTURE_SUMMARY.md  QUICK_REFERENCE.md  README.md  SUBSCRIPTIONS_UPDATE.md  generate_session.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_subforge.bat  subforge.session  test_architecture.py  test_config.py  tmp_telethon_error_inspect.py  tmp_telethon_inspect.py  tsconfig.base.json
.ai/: ARCHITECTURE.md  CONFIG.md  CONTRIBUTING_AI.md  DECISIONS.md  PROJECT.md  REVIEW.md  SESSION.md  SYSTEM.md  TASKS.md
.github/workflows/: lint.yml  tests.yml  update.yml
.scripts/: analyze_subs.py  analyze_subs2.py  debug_default.py  fast_generate.py  git_fix_main.py
apps/cli/: package.json
config/: providers.json  settings.json  subscriptions.json
config/.previous/: telegram_channels.json  telegram_proxy_nodes.json
docs/: CHANGELOG.md  CONTRIBUTING.md  MULTI_SUBSCRIPTION_OPTIMIZED.md  ROADMAP.md  SUBSCRIPTIONS.md
src/: runner.py
src/core/: __init__.py  config.py  config_merger.py  exceptions.py  logging.py  node_serializer.py  (+2 more)
subscriptions/: README.md  Telegram-List1.decoded.txt  decode_default.ps1  decode_default.py  default.decoded.txt  default.txt
tests/: conftest.py  test_config_loader.py  test_exceptions.py  test_logging.py  test_models.py  test_provider_interface.py  test_runner_session_resolution.py  test_runner_subscription_filtering.py  test_subscription_pipeline.py
(+33 files in other folders)
